# mcp-yaml-to-markdown

./: 404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: demo.md
.github/workflows/: docker_image.yaml  github_pages.yaml
docs/reference/: endpoints.md  generator.md  loader.md  models.md  new_endpoint_template.yaml  parser.md
mcp_tools/: __init__.py  generator.py  loader.py  main.py  models.py  parser.py  server.py  template_parser.py  tool_generator.py
reference/endpoints/: index.html
reference/generator/: index.html
reference/loader/: index.html
reference/models/: index.html
reference/parser/: index.html
scripts/: build_docs.sh  build_image.sh
search/: search_index.json
