[project]
name = "mcp-markdown-template"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "fastapi>=0.116.0",
    "fastmcp>=2.10.5",
    "requests>=2.32.5",
    "jinja2>=3.1.6",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.24.0",
]
